--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,8 @@
 trigger:
 - main
 
-pool: my-personal-computer
+pool: 
+  name: my-personal-computer
 
 resources:
 - repo: self
@@ -29,6 +30,7 @@ stages:
     displayName: Build
     pool:
       vmImage: $(vmImageName)
+      name: my-personal-computer
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
